--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <meta name="author" content="John Doe" />
     <!-- fb meta tags -->
     <meta
-      property="og:image"
+      property="og:images"
       content="https://avlokha.github.io/shualeduri-gamocd/"
     />
     <meta property="og:type" content="shualeduri" />
     <meta property="og:title" content="shualeduri gamocda" />
     <meta property="og:description" content="shualeduri shualeduri" />
     <meta
-      property="og:image"
+      property="og:images"
       content="https://avlokha.github.io/shualeduri-gamocd/"
     />
     <!-- twit meta tags -->
@@ -34,13 +34,13 @@
       content="In the early days, Twitter grew so quickly that it was almost impossible to add new features because engineers spent their time trying to keep the rocket ship from stalling."
     />
     <meta
-      property="og:image"
+      property="og:images"
       content="https://avlokha.github.io/shualeduri-gamocd/"
     />
     <title>second page</title>
     <link rel="stylesheet" href="css/fonts.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="shortcut icon" href="img/github icon.svg" type="image/svg" />
+    <link rel="shortcut icon" href="imgages/github icon.svg" type="image/svg" />
   </head>
   <body>
     <div class="container">
@@ -51,7 +51,7 @@
           <div class="design">
             <a href="#">
               <h1 class="white">design.<span class="today">today</span></h1>
-              <img src="img/Group 7.svg" alt="" />
+              <img src="images/Group 15.svg" alt="" />
             </a>
           </div>
           <!-- design.today// -->
