--- a/index.html
+++ b/index.html
@@ -63,31 +63,31 @@
               <ul>
                 <li>
                   <a href="#">
-                    <img src="img/img1.png" alt="home" />
+                    <img src="images/post-1.png" alt="home" />
                     <span class="white">home</span>
                   </a>
                 </li>
                 <li>
                   <a href="#">
-                    <img src="img/img2.png" alt="explore" />
+                    <img src="images/post-2.png" alt="explore" />
                     <span class="white">explore</span>
                   </a>
                 </li>
                 <li>
                   <a href="#">
-                    <img src="img/img3.png" alt="folders" />
+                    <img src="images/post-3.png" alt="folders" />
                     <span class="white">folders</span>
                   </a>
                 </li>
                 <li>
                   <a href="#">
-                    <img src="img/img4.png" alt="favourites" />
+                    <img src="images/post-4.png" alt="favourites" />
                     <span class="white">favourites</span>
                   </a>
                 </li>
                 <li>
                   <a href="#">
-                    <img src="img/img5.png" alt="activites" />
+                    <img src="images/posts-5.png" alt="activites" />
                     <span class="white">activites</span>
                   </a>
                 </li>
@@ -104,31 +104,31 @@
             <ul>
               <li>
                 <a href="#">
-                  <img src="img/Rectangle 40.png" alt="imgblog" />
+                  <img src="images/post-40.png" alt="imgblog" />
                   <span class="white">sajon</span>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <img src="img/Rectangle 41.png" alt="imgblog" />
+                  <img src="images/post-41.png" alt="imgblog" />
                   <span class="white">Tran Mau Tri Tam</span>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <img src="img/Rectangle 42.png" alt="imgblog" />
+                  <img src="images/post-42.png" alt="imgblog" />
                   <span class="white">Ghani Pradita</span>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <img src="img/Rectangle 43.png" alt="imgblog" />
+                  <img src="images/post-43.png" alt="imgblog" />
                   <span class="white">David Kovalev</span>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <img src="img/Rectangle 44.png" alt="imgblog" />
+                  <img src="images/post-44.png" alt="imgblog" />
                   <span class="white">Ryan Putnam</span>
                 </a>
               </li>
