--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <title>second page</title>
     <link rel="stylesheet" href="css/fonts.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="shortcut icon" href="imgages/github icon.svg" type="image/svg" />
+    <link rel="shortcut icon" href="images/github icon.svg" type="images/svg" />
   </head>
   <body>
     <div class="container">
@@ -104,31 +104,31 @@
             <ul>
               <li>
                 <a href="#">
-                  <img src="images/post-40.png" alt="imgblog" />
+                  <img src="images/post-40.png" alt="imagesblog" />
                   <span class="white">sajon</span>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <img src="images/post-41.png" alt="imgblog" />
+                  <img src="images/post-41.png" alt="imagesblog" />
                   <span class="white">Tran Mau Tri Tam</span>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <img src="images/post-42.png" alt="imgblog" />
+                  <img src="images/post-42.png" alt="imagesblog" />
                   <span class="white">Ghani Pradita</span>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <img src="images/post-43.png" alt="imgblog" />
+                  <img src="images/post-43.png" alt="imagesblog" />
                   <span class="white">David Kovalev</span>
                 </a>
               </li>
               <li>
                 <a href="#">
-                  <img src="images/post-44.png" alt="imgblog" />
+                  <img src="images/post-44.png" alt="imagesblog" />
                   <span class="white">Ryan Putnam</span>
                 </a>
               </li>
@@ -156,9 +156,9 @@
             <div class="goproo">
               <a href="#">
                 <span class="GOPRO">GO PRO!</span>
-                <img src="imgages/Commit 5.svg" alt="img" />
-                <img src="images/Commit 6.svg" alt="img" />
-                <img src="images/Grid 33.png" alt="img" />
+                <img src="images/Commit-5.svg" alt="images" />
+                <img src="images/Commit-6.svg" alt="images" />
+                <img src="images/Grid-33.png" alt="images" />
                 <span class="UPLOAD">UPLOAD</span>
               </a>
             </div>
@@ -203,7 +203,7 @@
                 </a>
               </li>
               <a class="filters" href="#">
-                <img src="img/Group 18.png" alt="img" />
+                <img src="images/Grid-18.png" alt="images" />
                 <span>filters</span>
               </a>
             </ul>
@@ -211,49 +211,49 @@
           <div class="articless">
             <a href="#">
               <article>
-                <img src="img/Rectangle 45.png" alt="img" />
+                <img src="images/post-45.png" alt="images" />
                 <p>UI Components for Unity Gaming</p>
               </article>
             </a>
             <a href="#">
               <article>
-                <img src="img/Rectangle 46.png" alt="img" />
+                <img src="images/post-46.png" alt="images" />
                 <p>Analytics Mobile App - Blurr Series</p>
               </article>
             </a>
             <a href="#">
               <article>
-                <img src="img/Rectangle 47.png" alt="img" />
+                <img src="images/post-47.png" alt="images" />
                 <p>Estaro - Dark-mode - Task Management App</p>
               </article>
             </a>
             <a href="#">
               <article>
-                <img src="img/Rectangle 48.png" alt="img" />
+                <img src="images/post-48.png" alt="images" />
                 <p>Live streaming application for gamers.</p>
               </article>
             </a>
             <a href="#">
               <article>
-                <img src="img/Rectangle 49.png" alt="img" />
+                <img src="images/post-49.png" alt="images" />
                 <p>Dark Mockup for Unity Gaming</p>
               </article>
             </a>
             <a href="#">
               <article>
-                <img src="img/Rectangle 50.png" alt="img" />
+                <img src="images/post-50.png" alt="images" />
                 <p>SMM - Social Media Management - App UI</p>
               </article>
             </a>
             <a href="#">
               <article>
-                <img src="img/Rectangle 51.png" alt="img" />
+                <img src="images/post-51.png" alt="images" />
                 <p>Food App 2.0</p>
               </article>
             </a>
             <a href="#">
               <article>
-                <img src="img/Rectangle 52.png" alt="img" />
+                <img src="images/post-52.png" alt="images" />
                 <p>Live streaming application for gamers.</p>
               </article>
             </a>
@@ -277,49 +277,49 @@
             </div>
             <div class="topdesigners-first1">
               <div class="flex-d">
-                <a href="#"><img src="img/Rectangle 65.png" alt="img" /></a>
+                <a href="#"><img src="images/post-65.png" alt="images" /></a>
                 <a href="#"><h3>Tran Mau Tri Tam</h3></a>
                 <span>Sai Gon, Vietnam</span>
                 <button>following</button>
               </div>
               <div class="flex-d">
-                <a href="#"><img src="img/Rectangle 66.png" alt="img" /></a>
+                <a href="#"><img src="images/post-66.png" alt="images" /></a>
                 <a href="#"><h3>Ghulam Rasool</h3></a>
                 <span>Dubai</span>
                 <button>following</button>
               </div>
               <div class="flex-d">
-                <a href="#"><img src="img/Rectangle 67.png" alt="img" /></a>
+                <a href="#"><img src="images/post-67.png" alt="images" /></a>
                 <a href="#"><h3>Zhenya Rynzhuk</h3></a>
                 <span>New York City, NY</span>
                 <button>following</button>
               </div>
               <div class="flex-d">
-                <a href="#"><img src="img/Rectangle 68.png" alt="img" /></a>
+                <a href="#"><img src="images/post-68.png" alt="images" /></a>
                 <a href="#"><h3>Ghani Pradita</h3></a>
                 <span>Yogyakarta, Indonesia</span>
                 <button>following</button>
               </div>
               <div class="flex-d">
-                <a href="#"><img src="img/Rectangle 69.png" alt="img" /></a>
+                <a href="#"><img src="images/post-69.png" alt="images" /></a>
                 <a href="#"><h3>Sajon</h3></a>
                 <span>Earth</span>
                 <button>following</button>
               </div>
               <div class="flex-d">
-                <a href="#"><img src="img/Rectangle 70.png" alt="img" /></a>
+                <a href="#"><img src="images/post-70.png" alt="images" /></a>
                 <a href="#"><h3>David Kovalev</h3></a>
                 <span>Sarasota, FL</span>
                 <button>following</button>
               </div>
               <div class="flex-d">
-                <a href="#"><img src="img/Rectangle 71.png" alt="img" /></a>
+                <a href="#"><img src="images/post-71.png" alt="images" /></a>
                 <a href="#"><h3>Ryan Putnam</h3></a>
                 <span>Colorado Springs</span>
                 <button>following</button>
               </div>
               <div class="flex-d">
-                <a href="#"><img src="img/Rectangle 72.png" alt="img" /></a>
+                <a href="#"><img src="images/post-72.png" alt="images" /></a>
                 <a href="#"><h3>Dmitry Lauretsky</h3></a>
                 <span>Omsk, Russia</span>
                 <button>following</button>
@@ -429,10 +429,10 @@
           </div>
           <div class="lastdiv1">
             <div>
-              <a href="#"><img src="img/Component 12.png" alt="fblogo" /></a>
-              <a href="#"><img src="img/Component 13.png" alt="instalogo" /></a>
+              <a href="#"><img src="images/Commit-12.png" alt="fblogo" /></a>
+              <a href="#"><img src="images/Com-13.png" alt="instalogo" /></a>
               <a href="#"
-                ><img src="img/Component 14.png" alt="twiterlogo"
+                ><img src="img/Com-14.png" alt="twiterlogo"
               /></a>
             </div>
             <div>
