--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       property="og:images"
       content="https://avlokha.github.io/shualeduri-gamocd/"
     />
-    <title>second page</title>
+    <title>Flow 2</title>
     <link rel="stylesheet" href="css/fonts.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" href="images/github icon.svg" type="images/svg" />
