--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <!-- fb meta tags -->
     <meta
       property="og:images"
-      content="https://avlokha.github.io/shualeduri-gamocd/"
+      content="https://githuber19.github.io/Front18--Shualeduri-Gamocda/"
     />
     <meta property="og:type" content="shualeduri" />
     <meta property="og:title" content="shualeduri gamocda" />
     <meta property="og:description" content="shualeduri shualeduri" />
     <meta
       property="og:images"
-      content="https://avlokha.github.io/shualeduri-gamocd/"
+      content="https://githuber19.github.io/Front18--Shualeduri-Gamocda/"
     />
     <!-- twit meta tags -->
     <meta name="twitter:card" content="summary" />
@@ -26,7 +26,7 @@
     <meta name="twitter:creator" content="@nickbilton" />
     <meta
       property="og:url"
-      content="https://avlokha.github.io/shualeduri-gamocd/"
+      content="https://githuber19.github.io/Front18--Shualeduri-Gamocda/"
     />
     <meta property="og:shualeduri" content="shualeduri" />
     <meta
@@ -35,7 +35,7 @@
     />
     <meta
       property="og:images"
-      content="https://avlokha.github.io/shualeduri-gamocd/"
+      content="https://githuber19.github.io/Front18--Shualeduri-Gamocda/"
     />
     <title>Flow 2</title>
     <link rel="stylesheet" href="css/fonts.css" />
@@ -151,13 +151,13 @@
                 id="search"
                 placeholder="Search inspiration"
               />
-              <img src="images/Component search.png" alt="" />
+              <img src="images/Component search.png" alt="images" />
             </div>
             <div class="goproo">
               <a href="#">
                 <span class="GOPRO">GO PRO!</span>
-                <img src="images/Commit-5.svg" alt="images" />
-                <img src="images/Commit-6.svg" alt="images" />
+                <img src="images/Component 9.svg" alt="images" />
+                <img src="images/Component 55.svg" alt="images" />
                 <img src="images/Grid-33.png" alt="images" />
                 <span class="UPLOAD">UPLOAD</span>
               </a>
@@ -304,14 +304,13 @@
                 <a href="#"><img src="images/post-67.png" alt="images" /></a>
                 <a href="#"><h3>Sajon</h3></a>
                 <span>Earth</span>
-            <button>following</button>
-            </div>
-            <div class="flex-d">
-            <a href="#"><img src="images/post-71.png" alt="images" /></a>
-            <a href="#"><h3>David Kovalev</h3></a>
-            <span>Sarasota, FL</span>
-                
-            <button>following</button>
+                <button>following</button>
+              </div>
+              <div class="flex-d">
+                <a href="#"><img src="images/post-71.png" alt="images" /></a>
+                <a href="#"><h3>David Kovalev</h3></a>
+                <span>Sarasota, FL</span>
+                <button>following</button>
               </div>
               <div class="flex-d">
                 <a href="#"><img src="images/post-68.png" alt="images" /></a>
